--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -7,11 +7,17 @@
   margin: 0;
 }
 
+#root {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
 .content {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 50px 0px;
+  margin: 80px 0px;
   gap: 20px;
 }
 
