--- a/frontend/src/pages/Contact/Contact.module.css
+++ b/frontend/src/pages/Contact/Contact.module.css
@@ -2,13 +2,13 @@ form {
     display: flex;
     flex-direction: column;
     width: 60%;
+    gap: 10px;
 }
 
 input, textarea {
     border-radius: 10px;
     border-style: solid;
     padding: 7px;
-    margin-bottom: 5px;
 }
 
 input[type="text"] {
@@ -22,6 +22,7 @@ textarea {
 .form_row {
     display: flex;
     justify-content: space-between;
+    gap: 10px;
 }
 
 .submit {
