Add BrandAmbassador Pop-up and AddZone switch
- Created the pop-up for BrandAmbassador and make it usable in Footer and Home
- Create functionality behind the addZone button in "Add a Zone"

--- a/frontend/src/pages/FindZone/FindZone.module.css
+++ b/frontend/src/pages/FindZone/FindZone.module.css
@@ -35,3 +35,26 @@
     border-radius: 10px;
     padding: 10px 20px;
 }
+
+.openZone {
+    margin-top: 15px;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+}
+
+.submit {
+    cursor: pointer;
+    background-color: #86F29E;
+    border-style: none;
+    border-radius: 10px;
+    padding: 10px 20px;
+}
+
+.cancel {
+    cursor: pointer;
+    background-color: #F1958F;
+    border-style: none;
+    border-radius: 10px;
+    padding: 10px 20px;
+}
