--- a/frontend/src/pages/layout/Navbar.module.css
+++ b/frontend/src/pages/layout/Navbar.module.css
@@ -2,18 +2,18 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 20px;
+    padding: 1rem; /* 1rem = 20px here because defined for * to be 20px */
     background-color: #023047;
 }
   
 .navbar_logo {
-    margin-right: auto;
     /* might need to specify font size */
     font-weight: 600; /* equivalent to semibold */
 }
 
 .navbar_links {
     display: flex;
+    flex-direction: row;
     gap: 20px;
     font-weight: 400;
 }
