--- a/frontend/src/pages/Home/Home.module.css
+++ b/frontend/src/pages/Home/Home.module.css
@@ -14,7 +14,7 @@ Need to tidy up a bit to see what's common among all those sections
 }
 
 .adventures {
-    background-image: url('./bikeHeaderHome.png');
+    background-image: url('../bikeHeaderHome.png');
     height: 1500px;
     width: 100%;
     background-position: center; 
