Made the website full responsive
In this commit:
- I added all the pictures that were on the google drive (some still need their size to be taken care of)
- Create hamburger menu for mobile devices
- added breakpoints to change the font-size and change flex-directions

--- a/frontend/src/pages/Contact/Contact.module.css
+++ b/frontend/src/pages/Contact/Contact.module.css
@@ -11,18 +11,18 @@ input, textarea {
     padding: 7px;
 }
 
-input[type="text"] {
-    width: 47.5%;
-}
-
 textarea {
     resize: none;
 }
 
 .form_row {
     display: flex;
-    justify-content: space-between;
+    flex-direction: row;
     gap: 10px;
+}
+
+.form_row input {
+    width: 100%;
 }
 
 .submit {
@@ -32,4 +32,14 @@ textarea {
     border-style: none;
     border-radius: 10px;
     cursor: pointer;
+}
+
+@media screen and (max-width: 500px) {
+    .form_row {
+        flex-direction: column;
+    }
+
+    .form_row input {
+        width: auto;
+    }
 }
