--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -3,7 +3,7 @@
 
 * {
   font-family: 'Outfit', sans-serif;
-  font-size: 20px;
+  font-size: 24px;
   margin: 0;
 }
 
@@ -11,20 +11,24 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  position: relative;
+  overflow-x: hidden;
 }
 
 .content {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 80px 0px;
+  margin: 2rem 0px;
   gap: 20px;
 }
 
 .title {
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
-  font-size: 70px;
+  font-size: 3rem;
+  text-align: center;
+  padding: 0 1rem;
 }
 
 .description {
@@ -33,15 +37,17 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
   margin-bottom: 50px;
+  padding: 0 1rem;
 }
 
 .brand_ambassador {
   background-color: #219EBC;
   color: white;
   border-style: none;
-  border-radius: 10px;
-  padding: 10px;
+  border-radius: 0.5rem;
+  padding: 0.5rem;
   cursor: pointer;
 }
 
@@ -49,7 +55,19 @@
   background-color: #FB8500;
   color: white;
   border-style: none;
-  border-radius: 10px;
-  padding: 10px;
+  border-radius: 0.5rem;
+  padding: 0.5rem;
   cursor: pointer;
 }
+
+@media only screen and (max-width: 832px) {
+  * {
+    font-size: 16px;
+  }
+}
+
+/* I'm trying to figure out how many breakpoints I'm going to need:
+- One at 900px
+- One at 600px
+- One at 300px
+*/
