--- a/frontend/src/pages/About/About.module.css
+++ b/frontend/src/pages/About/About.module.css
@@ -6,32 +6,65 @@
 
 .section {
     width: 100%;
-    padding: 100px 0px;
+    padding: 3rem 0px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 50px;
+    gap: 2rem;
+}
+
+.sectionContainer {
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+    justify-content: center;
+    gap: 2rem;
+}
+
+.sectionTitleWhite {
+    font-size: 2rem;
+    color: white;
+}
+
+.sectionTitleBlack {
+    font-size: 2rem;
+    color: black;
 }
 
 .img {
     width: 25%;
-    height: 100px;
-    padding: 50px;
+    padding: 2rem 1rem;
     background-color: #D9D9D9;
     border-radius: 20px;
     display: flex;
     align-items: center;
+    text-align: center;
     justify-content: center;
 }
 
 .text {
     width: 50%;
-    height: 100px;
-    padding: 50px;
+    padding: 2rem 1rem;
     border-radius: 20px;
     background-color: #D9D9D9;
     display: flex;
     align-items: center;
+    text-align: center;
     justify-content: center;
+}
+
+@media screen and (max-width: 800px) {
+    .sectionContainer {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .img {
+        width: 80%;
+    }
+
+    .text {
+        width: 80%;
+    }
 }
