--- a/frontend/src/pages/Pop-up/BrandAmbassadorModal.module.css
+++ b/frontend/src/pages/Pop-up/BrandAmbassadorModal.module.css
@@ -1,4 +1,5 @@
 .modal {
+    width: 70vw;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -17,12 +18,18 @@
 }
 
 .form_row {
+    width: 100%;
     display: flex;
     flex-direction: row;
     gap: 10px;
 }
 
+.form_row input {
+    width: 100%;
+}
+
 .button_row {
+    width: 100%;
     display: flex;
     flex-direction: row;
     gap: 10px;
@@ -33,7 +40,7 @@
     background-color: #FF6C6C;
     border-style: none;
     border-radius: 10px;
-    width: 50%;
+    width: 100%;
     padding: 10px;
     color: white;
 }
@@ -44,6 +51,20 @@
     border-style: none;
     border-radius: 10px;
     padding: 10px ;
-    width: 50%;
+    width: 100%;
     color: white;
+}
+
+@media screen and (max-width: 600px) {
+    .form_row {
+        flex-direction: column;
+    }
+
+    .form_row input {
+        width: auto;
+    }
+
+    .button_row {
+        flex-direction: column;
+    }
 }
