--- a/frontend/src/pages/FindZone/FindZone.module.css
+++ b/frontend/src/pages/FindZone/FindZone.module.css
@@ -7,7 +7,7 @@
 
 .map {
     width: 90%;
-    height: 500px;
+    height: 95vh;
     border: 2px solid #e3e3e3;
     border-radius: 10px;
     display: flex;
