--- a/frontend/src/pages/Home/Home.module.css
+++ b/frontend/src/pages/Home/Home.module.css
@@ -163,7 +163,7 @@ button a {
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 2rem;
     padding: 80px 0px;
     align-items: center;
 }
@@ -179,13 +179,13 @@ button a {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    gap: 1rem;
+    gap: 2rem;
     align-items: center;
     padding: 0 2rem;
 }
 
 .helpTextBox {
-    text-align: center;
+    text-align: left;
 }
 
 .helpImageContainer {
@@ -212,11 +212,12 @@ button a {
 .valuesTextBox {
     background-color: #D9D9D9;
     width: 100% ;
-    /* flex-grow: 1; */
+    flex-grow: 1;
+    justify-content: center;
     color: black;
     border-style: none;
     border-radius: 1rem;
-    padding: 0.5rem 1rem;
+    padding: 1rem 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
