New potential fix for InfoWindow image height

--- a/frontend/src/pages/FindZone/Maps.module.css
+++ b/frontend/src/pages/FindZone/Maps.module.css
@@ -33,6 +33,9 @@
 
     .leftContainer, .image {
         width: auto;
-        height: auto;
     } 
+
+    .image {
+        max-height: 200px;
+    }
 }
