--- a/frontend/src/pages/About/About.module.css
+++ b/frontend/src/pages/About/About.module.css
@@ -15,6 +15,7 @@
 }
 
 .sectionContainer {
+    height: min-content;
     display: flex;
     flex-direction: row;
     align-items: stretch;
@@ -29,29 +30,45 @@
 
 .sectionTitleBlack {
     font-size: 2rem;
-    color: black;
+    color: #023047;
 }
 
-.img {
+.image {
     width: 25%;
-    padding: 2rem 1rem;
-    background-color: #D9D9D9;
-    border-radius: 20px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
 }
 
-.text {
+.image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 1rem;
+}
+
+.textWhiteSection {
+    border: 0.3rem solid #023047;
     width: 50%;
     padding: 2rem 1rem;
-    border-radius: 20px;
-    background-color: #D9D9D9;
+    border-radius: 1rem;
     display: flex;
+    flex-direction: column;
     align-items: center;
     text-align: center;
     justify-content: center;
+    gap: 1rem;
+}
+
+.textBlueSection {
+    border: 0.3rem solid white;
+    color: white;
+    width: 50%;
+    padding: 2rem 1rem;
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    gap: 1rem;
 }
 
 @media screen and (max-width: 800px) {
