--- a/frontend/src/pages/Home/Home.module.css
+++ b/frontend/src/pages/Home/Home.module.css
@@ -14,7 +14,6 @@ Need to tidy up a bit to see what's common among all those sections
 }
 
 .adventures {
-    background-image: url('../mainImage1.jpg');
     /* height: calc(100vh - 8vh); */
     /* height: 100vh; */
     height: 35rem;
@@ -115,7 +114,7 @@ button a {
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 1rem;
     padding: 80px 0px;
     align-items: center;
 }
@@ -143,7 +142,6 @@ button a {
 }
 
 .sponsorsElement {
-    width: min-content;
     flex-grow: 1;
     display: flex;
     flex-direction: column;
@@ -153,17 +151,36 @@ button a {
     padding: 2rem
 }
 
+.sponsorsElement p {
+    /* color:#f2f2f2; */
+    font-weight: 400;
+    font-style: italic;
+}
+
+.nameAndSubheading h2 {
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+
+.nameAndSubheading h3 {
+    color:#f2f2f2;
+    font-size: 0.90rem;
+    font-weight: 300;
+}
+
 .sponsorsElement img {
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
+    width: 25vw;
+    height: 25vw;
+    object-fit: cover;
+    border-radius: 0.5rem;
+    box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.3);
 }
 
 .help {
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 3rem;
     padding: 80px 0px;
     align-items: center;
 }
@@ -175,38 +192,106 @@ button a {
     padding: 0 2rem;
 }
 
-.helpContainer {
+/* .helpContainer {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     gap: 2rem;
     align-items: center;
     padding: 0 2rem;
-}
+} */
 
-.helpTextBox {
-    text-align: left;
-}
 
 .helpImageContainer {
     display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    gap: 3rem;
+}
+
+.helpFirstRow {
+    display: flex;
+    align-items: center;
     flex-direction: row;
+    gap: 3rem;
+}
+
+.helpSecondRow {
+    display: flex;
+    flex-direction: row;
+    gap: 5rem; 
+    justify-content: center;
+}
+
+.helpTextBox {
+    width: 35vw;
+    height: fit-content;
+    padding: 1rem;
+    background-color: #023047;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 1rem;
     gap: 1rem;
+    text-align: center;
 }
 
 .helpImageContainer img {
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
+    width: 20vw;
+    height: 20vw;
+    object-fit: cover;
+    border: 0.5rem solid white;
+    border-bottom: 1.5rem solid white;
+    box-shadow: 0rem 0rem 1rem 0rem rgba(0,0,0,0.3);
 }
 
 /* .values {
 
 } */
 
+.valuesContainer {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+}
+
+.valuesElement {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 1rem;
+}
+
+.valuesImage {
+    width: 30vw;
+    height: 30vw;
+    background-position: center; 
+    background-repeat: no-repeat; 
+    background-size: cover;
+    box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.3);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.valuesImage h2 {
+    color: #f2f2f2;
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+
 .valuesName {
     font-size: 1rem;
     font-weight: 600;
+}
+
+.valuesDescription {
+    color: #f2f2f2;
+    width: 25vw;
 }
 
 .valuesTextBox {
@@ -265,8 +350,43 @@ button a {
         align-items: center;
     }
 
+    .sponsorsElement img {
+        width: 50vw;
+        height: 50vw;
+    }
+
     .helpImageContainer {
+        flex-direction: column-reverse;
+    }
+
+    .helpFirstRow, .helpSecondRow {
         flex-direction: column;
+        align-items: center;
+        gap: 3rem;
+    }
+
+    .helpTextBox {
+        width: 80vw;
+        padding: 1rem;
+    }
+
+    .helpImageContainer img {
+        width: 50vw;
+        height: 50vw;
+    }
+
+    .valuesContainer {
+        flex-direction: column;
+        gap: 5rem;
+    }
+
+    .valuesImage {
+        width: 75vw;
+        height: 75vw;
+    }
+
+    .valuesDescription {
+        width: 70vw;
     }
 
 }
