--- a/frontend/src/pages/FindZone/FindZone.module.css
+++ b/frontend/src/pages/FindZone/FindZone.module.css
@@ -13,7 +13,7 @@ button {
     width: 90%;
     height: 95vh;
     border: 2px solid #e3e3e3;
-    border-radius: 10px;
+    border-radius: 0.8rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -88,8 +88,13 @@ button {
     padding: 10px 20px;
 }
 
-@media screen and (max-width: 500px) {
-    /* .openZone {
-        flex-direction: column;
-    } */
-}
+/* @media screen and (max-width: 500px) {
+    .map {
+        width: 100%;
+        height: 95vh;
+        border: none;
+        border-radius: none;
+        align-items: center;
+        justify-content: center;
+    }
+} */
