--- a/frontend/src/pages/FindZone/FindZone.module.css
+++ b/frontend/src/pages/FindZone/FindZone.module.css
@@ -26,7 +26,6 @@ button {
     flex-direction: column;
     gap: 10px;
     align-items: center;
-    text-align: center;
 }
 
 .missZone h2 {
@@ -44,6 +43,7 @@ button {
 }
 
 .openZone {
+    width: 100%;
     margin-top: 15px;
     display: flex;
     flex-direction: column;
@@ -58,10 +58,15 @@ button {
 
 .rating {
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
+    flex-direction: column;
+    gap: 0.25rem;
+    border: 2px solid #e3e3e3;
+    border-radius: 10px;
+    padding: 7px;
+}
+
+.rating p {
+    color: #747474;
 }
 
 .buttonRow {
