--- a/frontend/src/pages/About/About.module.css
+++ b/frontend/src/pages/About/About.module.css
@@ -11,7 +11,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 2rem;
+    gap: 3rem;
 }
 
 .sectionContainer {
@@ -20,21 +20,24 @@
     flex-direction: row;
     align-items: stretch;
     justify-content: center;
-    gap: 2rem;
+    gap: 4rem;
 }
 
 .sectionTitleWhite {
-    font-size: 2rem;
+    font-size: 3rem;
+    font-weight: 400;
     color: white;
 }
 
 .sectionTitleBlack {
-    font-size: 2rem;
+    font-size: 3rem;
+    font-weight: 400;
     color: #023047;
 }
 
 .image {
-    width: 25%;
+    width: 20rem;
+    height: 20rem;
 }
 
 .image img {
@@ -45,36 +48,106 @@
 }
 
 .textWhiteSection {
-    border: 0.3rem solid #023047;
-    width: 50%;
-    padding: 2rem 1rem;
-    border-radius: 1rem;
+    width: 35%;
+    padding: 1rem 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    text-align: center;
     justify-content: center;
-    gap: 1rem;
+    gap: 2.5rem;
 }
 
 .textBlueSection {
-    border: 0.3rem solid white;
     color: white;
-    width: 50%;
-    padding: 2rem 1rem;
-    border-radius: 1rem;
+    width: 35%;
+    padding: 1rem 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    text-align: center;
     justify-content: center;
+    gap: 2rem;
+}
+
+.textBlueSection h2 {
+    font-size: 1.5rem;
+    font-weight: 400;
+}
+
+.textWhiteSection h2 {
+    font-size: 1.5rem;
+    font-weight: 400;
+}
+
+.nupicsList {
+    display: flex;
+    flex-direction: column;
     gap: 1rem;
 }
 
-@media screen and (max-width: 800px) {
+.nupicsListItem {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1.5rem;
+}
+
+.nupicsListItem h3 {
+    font-size: 2rem;
+}
+
+.nupicsListItem p {
+    text-align: left;
+}
+
+.nutagsListElem {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 2rem;
+}
+
+.nutagsListElem p {
+    text-align: left;
+}
+
+.square {
+    background-color: #D9D9D9;
+    width: 3rem;
+    height: 3rem;
+    flex-shrink: 0;
+}
+
+.circle {
+    background-color: #D9D9D9;
+    width: 2rem;
+    height: 2rem;
+    flex-shrink: 0;
+    border-radius: 50%;
+}
+
+.buttonNutunes {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.buttonNutunes button {
+    padding: 0.25rem 1rem;
+    border-radius: 0.5rem;
+    border: none;
+}
+
+.nudaysContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+@media screen and (max-width: 1200px) {
     .sectionContainer {
         flex-direction: column;
         align-items: center;
+        gap: 1rem;
     }
 
     .reverse {
@@ -92,5 +165,6 @@
 
     .textBlueSection, .textWhiteSection {
         width: 70%;
+        gap: 1.5rem;
     }
 }
