--- a/frontend/src/pages/FindZone/Maps.module.css
+++ b/frontend/src/pages/FindZone/Maps.module.css
@@ -18,12 +18,20 @@
     font-weight: 400;
 }
 
-.image {
+.imageContainer {
+    display: flex;
     width: 50%;
-    object-fit: cover;
+    height: 11em;
     border-radius: 1rem;
     border: 3px solid #e9e9ed;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.imageContainer img {
+    object-fit: cover;
+    border-radius: 0.9rem;
+    width: 100%;
+    height: 100%;
 }
 
 @media screen and (max-width: 500px) {
@@ -31,11 +39,7 @@
         flex-direction: column-reverse;
     }
 
-    .leftContainer, .image {
+    .leftContainer, .imageContainer {
         width: auto;
     } 
-
-    .image {
-        max-height: 200px;
-    }
 }
