add spotify link to about and add content to tooltip

--- a/frontend/src/pages/About/About.module.css
+++ b/frontend/src/pages/About/About.module.css
@@ -137,6 +137,11 @@
     border: none;
 }
 
+.buttonNutunes a {
+    text-decoration: none;
+    color: inherit;
+}
+
 .nudaysContainer {
     display: flex;
     flex-direction: column;
