--- a/frontend/src/pages/FindZone/FindZone.module.css
+++ b/frontend/src/pages/FindZone/FindZone.module.css
@@ -21,6 +21,7 @@ button {
 }
 
 .missZone {
+    min-width: 450px;
     margin-top: 1rem;
     display: flex;
     flex-direction: column;
@@ -91,6 +92,12 @@ button {
     border-style: none;
     border-radius: 10px;
     padding: 10px 20px;
+}
+
+@media only screen and (max-width: 832px) {
+    .missZone {
+        min-width: 305px;
+    }
 }
 
 /* @media screen and (max-width: 500px) {
