--- a/frontend/src/pages/FindZone/FindZone.module.css
+++ b/frontend/src/pages/FindZone/FindZone.module.css
@@ -21,7 +21,7 @@ button {
 }
 
 .missZone {
-    min-width: 450px;
+    min-width: 500px;
     margin-top: 1rem;
     display: flex;
     flex-direction: column;
@@ -44,7 +44,7 @@ button {
 }
 
 .openZone {
-    width: 100%;
+    width: 500px;
     margin-top: 15px;
     display: flex;
     flex-direction: column;
@@ -52,6 +52,7 @@ button {
 }
 
 .inputs {
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
@@ -63,7 +64,7 @@ button {
     gap: 0.25rem;
     border: 2px solid #e3e3e3;
     border-radius: 10px;
-    padding: 7px;
+    padding: 0.4rem;
 }
 
 .rating p {
@@ -74,6 +75,32 @@ button {
     display: flex;
     flex-direction: row;
     gap: 0.5rem;
+}
+
+.accordionDetails {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+.accordionDetails p {
+    font-size: 0.8rem; 
+    line-height: 1; 
+    font-weight: 300
+}
+
+.accordionDetails ul {
+    padding-left: 0.7rem;
+}
+
+.accordionDetails li {
+    font-size: 0.8rem;
+    font-weight: 300;
+}
+
+.accordionDetails li strong {
+    font-size: 0.8rem;
+    font-weight: 500;
 }
 
 .submit {
@@ -97,6 +124,10 @@ button {
 @media only screen and (max-width: 832px) {
     .missZone {
         min-width: 305px;
+    }
+
+    .openZone {
+        width: 305px;
     }
 }
 
