Instagram carousel, fix in addZone, compress image
In this commit, I did the following:
- I implemented the instagram carousel (we still need to put the access token in the DB)
- I added the rate the zone accordion, waiting for Alex to see what words need to be changed
- I compressed the images (reduced size mainly) to increase loading time

--- a/frontend/src/pages/Home/Home.module.css
+++ b/frontend/src/pages/Home/Home.module.css
@@ -321,6 +321,11 @@ button a {
     font-weight: 500;
 }
 
+.instagram h3 {
+    font-size: 1rem;
+    font-weight: 400;
+}
+
 /* BREAKPOINTS */
 
 @media screen and (max-width: 1200px) {
