--- a/frontend/src/pages/About/About.module.css
+++ b/frontend/src/pages/About/About.module.css
@@ -47,6 +47,18 @@
     border-radius: 1rem;
 }
 
+.imageNupics {
+    width: 20rem;
+    height: 20rem;
+}
+
+.imageNupics img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 1rem;
+}
+
 .textWhiteSection {
     width: 35%;
     padding: 1rem 1rem;
@@ -111,9 +123,13 @@
 }
 
 .square {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: #D9D9D9;
     width: 3rem;
     height: 3rem;
+    border-radius: 0.5rem;
     flex-shrink: 0;
 }
 
@@ -121,6 +137,14 @@
     background-color: #D9D9D9;
     width: 2rem;
     height: 2rem;
+    flex-shrink: 0;
+    border-radius: 50%;
+}
+
+.circleNupics {
+    background-color: white;
+    width: 4rem;
+    height: 4rem;
     flex-shrink: 0;
     border-radius: 50%;
 }
@@ -148,6 +172,13 @@
     gap: 1rem;
 }
 
+@media screen and (max-width: 832px) {
+    .square img {
+        width: 40px;
+        height: 40px;
+    }
+}
+
 @media screen and (max-width: 1200px) {
     .sectionContainer {
         flex-direction: column;
@@ -166,6 +197,12 @@
 
     .image {
         width: 80%;
+    }
+
+    .imageNupics {
+        width: 80%;
+        margin-top: 1.5rem;
+        margin-bottom: 1.5rem;
     }
 
     .textBlueSection, .textWhiteSection {
