--- a/frontend/src/pages/FindZone/FindZone.module.css
+++ b/frontend/src/pages/FindZone/FindZone.module.css
@@ -106,6 +106,7 @@ button {
 
 .submit {
     color: black;
+    font-weight: 400;
     width: 100%;
     cursor: pointer;
     background-color: #86F29E;
